Mention subcommands for HelpThreadCommand